Add readme links and version up

--- a/examples/add_data.ipynb
+++ b/examples/add_data.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "This example demonstrates how to leverage wikirepo to most effectively add data to [Wikidata](https://www.wikidata.org/wiki/Wikidata:Main_Page). We'll load in a dataset, check for missing data, and then go through the process of filling that data and pushing the changes back to Wikidata. \n",
     "\n",
-    "The assumption is that the property that data should be added to already exists. See [examples/add_property]() for how to add a property to wikirepo and Wikidata."
+    "The assumption is that the property that data should be added to already exists. See [examples/add_property](https://github.com/andrewtavis/wikirepo/blob/main/examples/add_property.ipynb) for how to add a property to wikirepo and Wikidata."
    ]
   },
   {
