--- a/examples/add_property.ipynb
+++ b/examples/add_property.ipynb
@@ -24,7 +24,7 @@
     "- ['P6' (head of government)](https://www.wikidata.org/wiki/Property:P6)\n",
     "- ['P172' (ethnicity)](https://www.wikidata.org/wiki/Property:P172)\n",
     "\n",
-    "The final modules for each of these can be found in [data/demographic/population](https://www.wikidata.org/wiki/Wikidata:Main_Page), [data/political/executive](https://www.wikidata.org/wiki/Wikidata:Main_Page), and [data/demographic/ethnic_div](https://www.wikidata.org/wiki/Wikidata:Main_Page) respectively. The focus will be how to add a property that already exists on [Wikidata](https://www.wikidata.org/wiki/Wikidata:Main_Page) to wikirepo, with later versions covering the process of adding a property to Wikidata as well.\n",
+    "The final modules for each of these can be found in [data/demographic/population](https://github.com/andrewtavis/wikirepo/blob/main/wikirepo/data/demographic/population.py), [data/political/executive](https://github.com/andrewtavis/wikirepo/blob/main/wikirepo/data/political/executive.py), and [data/demographic/ethnic_div](https://github.com/andrewtavis/wikirepo/blob/main/wikirepo/data/demographic/ethnic_div.py) respectively. The focus will be how to add a property that already exists on [Wikidata](https://www.wikidata.org/wiki/Wikidata:Main_Page) to wikirepo, with later versions covering the process of adding a property to Wikidata as well.\n",
     "\n",
     "**Note:** by \"the appropriate data directory for the new property\" we mean that a new module should go into the [wikirepo/data](https://github.com/andrewtavis/wikirepo/tree/main/wikirepo/data) directory that matches a Wikidata sub-page. Sometimes data isn't on the location's page itself, but rather on a sub-page. An example is that certain economic properties for [Germany](https://www.wikidata.org/wiki/Q183) are found on the page [economy of Germany](https://www.wikidata.org/wiki/Q8046). wikirepo checks for a property on the main page of a location first, and if the property is not found then the package checks the sub-page associated with the module's directory (the user is notified that the property does not exist for the given location if it is found in neither page). Properties are often moved from main pages to sub-pages, so even current main page property modules need to be organized based on where they could be re-indexed. Worst comes to worst, put the module in [data/misc](https://github.com/andrewtavis/wikirepo/tree/main/wikirepo/data/misc)."
    ]
@@ -34,8 +34,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-07T08:58:48.405559Z",
-     "start_time": "2020-12-07T08:58:47.970152Z"
+     "end_time": "2020-12-08T11:29:32.138356Z",
+     "start_time": "2020-12-08T11:29:31.696107Z"
     }
    },
    "outputs": [
@@ -53,12 +53,6 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import sys\n",
-    "\n",
-    "analysis_dir = os.path.dirname(os.path.realpath('add_property.ipynb'))\n",
-    "analysis_dir = analysis_dir.split('wikirepo')[0] + 'wikirepo'\n",
-    "sys.path.insert(0, analysis_dir)\n",
     "from wikirepo.data import time_utils, wd_utils\n",
     "\n",
     "from IPython.core.display import display, HTML\n",
@@ -77,8 +71,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-07T08:58:49.886189Z",
-     "start_time": "2020-12-07T08:58:48.409689Z"
+     "end_time": "2020-12-08T11:29:36.673058Z",
+     "start_time": "2020-12-08T11:29:34.630060Z"
     }
    },
    "outputs": [
@@ -129,8 +123,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-07T08:58:49.892850Z",
-     "start_time": "2020-12-07T08:58:49.887981Z"
+     "end_time": "2020-12-08T11:29:36.679579Z",
+     "start_time": "2020-12-08T11:29:36.674835Z"
     }
    },
    "outputs": [
@@ -212,8 +206,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-07T08:58:50.323328Z",
-     "start_time": "2020-12-07T08:58:50.319967Z"
+     "end_time": "2020-12-08T11:29:37.212298Z",
+     "start_time": "2020-12-08T11:29:37.208646Z"
     }
    },
    "outputs": [
@@ -238,8 +232,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-07T08:58:50.580105Z",
-     "start_time": "2020-12-07T08:58:50.576472Z"
+     "end_time": "2020-12-08T11:29:37.644350Z",
+     "start_time": "2020-12-08T11:29:37.640642Z"
     }
    },
    "outputs": [
@@ -273,8 +267,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-07T08:58:51.005702Z",
-     "start_time": "2020-12-07T08:58:51.001025Z"
+     "end_time": "2020-12-08T11:29:38.241261Z",
+     "start_time": "2020-12-08T11:29:38.237517Z"
     }
    },
    "outputs": [
@@ -299,8 +293,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-07T08:58:51.279993Z",
-     "start_time": "2020-12-07T08:58:51.276198Z"
+     "end_time": "2020-12-08T11:29:38.518157Z",
+     "start_time": "2020-12-08T11:29:38.514295Z"
     }
    },
    "outputs": [
@@ -335,8 +329,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-07T08:58:51.827965Z",
-     "start_time": "2020-12-07T08:58:51.825148Z"
+     "end_time": "2020-12-08T11:29:39.325093Z",
+     "start_time": "2020-12-08T11:29:39.322385Z"
     }
    },
    "outputs": [],
@@ -353,7 +347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The final module can again be found in [data/demographic/population](https://www.wikidata.org/wiki/Wikidata:Main_Page)."
+    "The final module can again be found in [data/demographic/population](https://github.com/andrewtavis/wikirepo/blob/main/wikirepo/data/demographic/population.py)."
    ]
   },
   {
@@ -377,8 +371,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-07T08:58:52.848060Z",
-     "start_time": "2020-12-07T08:58:52.841638Z"
+     "end_time": "2020-12-08T11:29:40.996529Z",
+     "start_time": "2020-12-08T11:29:40.989802Z"
     }
    },
    "outputs": [
@@ -463,8 +457,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-07T08:58:53.754053Z",
-     "start_time": "2020-12-07T08:58:53.750268Z"
+     "end_time": "2020-12-08T11:29:41.713928Z",
+     "start_time": "2020-12-08T11:29:41.709914Z"
     }
    },
    "outputs": [
@@ -489,8 +483,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-07T08:58:54.997190Z",
-     "start_time": "2020-12-07T08:58:54.161404Z"
+     "end_time": "2020-12-08T11:29:43.069363Z",
+     "start_time": "2020-12-08T11:29:42.108621Z"
     }
    },
    "outputs": [
@@ -527,8 +521,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-07T08:58:55.002001Z",
-     "start_time": "2020-12-07T08:58:54.999467Z"
+     "end_time": "2020-12-08T11:29:43.089259Z",
+     "start_time": "2020-12-08T11:29:43.086580Z"
     }
    },
    "outputs": [],
@@ -545,7 +539,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The resulting module can again be found in [data/political/executive](https://www.wikidata.org/wiki/Wikidata:Main_Page)."
+    "The resulting module can again be found in [data/political/executive](https://github.com/andrewtavis/wikirepo/blob/main/wikirepo/data/political/executive.py)."
    ]
   },
   {
@@ -559,7 +553,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ethnic diversity via ['P172' (ethnicity)](https://www.wikidata.org/wiki/Property:P172) is an example of a property that should be split over multiple columns. Rather than put all the information into a single column for the user to then split, wikirepo instead prefixes each potential element and creates columns for them for their respective data.\n",
+    "Ethnic diversity via ['P172' (ethnic group)](https://www.wikidata.org/wiki/Property:P172) is an example of a property that should be split over multiple columns. Rather than put all the information into a single column for the user to then split, wikirepo instead prefixes each potential element and creates columns for them for their respective data.\n",
     "\n",
     "Let's look at the first element of German ethnicity:"
    ]
@@ -569,8 +563,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-07T08:58:57.129110Z",
-     "start_time": "2020-12-07T08:58:57.123592Z"
+     "end_time": "2020-12-08T11:29:44.177540Z",
+     "start_time": "2020-12-08T11:29:44.172241Z"
     }
    },
    "outputs": [
@@ -639,8 +633,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-07T08:58:57.802088Z",
-     "start_time": "2020-12-07T08:58:57.797852Z"
+     "end_time": "2020-12-08T11:29:45.068913Z",
+     "start_time": "2020-12-08T11:29:45.065127Z"
     }
    },
    "outputs": [
@@ -665,8 +659,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-07T08:58:58.934413Z",
-     "start_time": "2020-12-07T08:58:58.168099Z"
+     "end_time": "2020-12-08T11:29:46.092155Z",
+     "start_time": "2020-12-08T11:29:45.474176Z"
     }
    },
    "outputs": [
@@ -691,8 +685,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-07T08:58:59.244383Z",
-     "start_time": "2020-12-07T08:58:58.936501Z"
+     "end_time": "2020-12-08T11:29:46.614310Z",
+     "start_time": "2020-12-08T11:29:46.094634Z"
     }
    },
    "outputs": [
@@ -726,8 +720,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-07T08:58:59.965200Z",
-     "start_time": "2020-12-07T08:58:59.960994Z"
+     "end_time": "2020-12-08T11:29:46.868401Z",
+     "start_time": "2020-12-08T11:29:46.864730Z"
     }
    },
    "outputs": [
@@ -753,7 +747,7 @@
    "source": [
     "For this property we thus need to use a `sub_pid` variable that tells wikirepo where to look for the value. \n",
     "\n",
-    "**None:** another use of `sub_pid` is to set its value to `bool`. This tells wikirepo to assign `True` if the property is present. An example of this is [data/institutional/org_membership]() where a boolean value is assigned to columns based on if a location is a member of an organization at a given time. Values of `False` need to be filled afterwards, and some values are replaced for organizations that are widely known. This is thus an example of a property that requires a bit more work than simply setting the module header.\n",
+    "**None:** another use of `sub_pid` is to set its value to `bool`. This tells wikirepo to assign `True` if the property is present. An example of this is [data/institutional/org_membership](https://github.com/andrewtavis/wikirepo/blob/main/wikirepo/data/institutional/org_membership.py) where a boolean value is assigned to columns based on if a location is a member of an organization at a given time. Values of `False` need to be filled afterwards, and some values are replaced for organizations that are widely known. This is thus an example of a property that requires a bit more work than simply setting the module header.\n",
     "\n",
     "Continuing, as we want the values to be put into separate columns where the QIDs labels for the entries get prefixed, we need to use the `col_prefix` variable and set the `col_name` variable to `None`. Let's choose `eth` for `col_prefix`, meaning that columns produced will be `eth_germans`, `eth_turks`, etc (an underscore is added automatically). To complete the needed information, the values themselves are only present at individual times, so in this case we can set `span` to `False`.\n",
     "\n",
@@ -765,8 +759,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-07T08:59:01.120377Z",
-     "start_time": "2020-12-07T08:59:01.117330Z"
+     "end_time": "2020-12-08T11:29:48.197124Z",
+     "start_time": "2020-12-08T11:29:48.194308Z"
     }
    },
    "outputs": [],
@@ -783,7 +777,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The final version of this module can be found in [data/demographic/ethnic_div](https://www.wikidata.org/wiki/Wikidata:Main_Page)."
+    "The final version of this module can be found in [data/demographic/ethnic_div](https://github.com/andrewtavis/wikirepo/blob/main/wikirepo/data/demographic/ethnic_div.py)."
    ]
   },
   {
